--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <section id="home" class="section home">
     <div class="home-content">
-      <img src="images/profile.jpg" alt="Profile" class="profile-img" />
+      <img src="Images/profile.jpg" alt="Profile" class="profile-img" />
       <div class="intro">
         <h1>Hi, I'm Shaik Khaja</h1>
         <p>I'm a full-stack web developer passionate about building beautiful web apps.</p>
