--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <div class="logo">Shaik Khaja</div>
+    <div class="logo">Shaik Khaja Moinuddin</div>
     <nav id="navbar">
       <a href="#home" class="nav-link">Home</a>
       <a href="#about" class="nav-link">About</a>
