--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="home-content">
       <img src="Images/profile.jpg" alt="Profile" class="profile-img" />
       <div class="intro">
-        <h1>Hi, I'm Shaik Khaja</h1>
+        <h1>Hi, I'm Shaik Khaja Moinuddin</h1>
         <p>I'm a full-stack web developer passionate about building beautiful web apps.</p>
       </div>
     </div>
